@@ -1,5 +1,11 @@
 2013-04-13  Werner Lemberg  <wl@gnu.org>
 
+	[ftview] Key `H' should be active only if we have a CFF.
+
+	* src/ftview.c (Process_Event): Do it.
+
+2013-04-13  Werner Lemberg  <wl@gnu.org>
+
 	[ftview] Add keys `A'-`F' to select LCD mode.
 
 	* src/ftview.c (event_help): Updated and rewritten to provide a
